namespaces/live.cloud-platform.service.justice.gov.uk/laa-inquests-internal-ui-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-inquests-internal-ui-staging"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-inquests"
    cloud-platform.justice.gov.uk/application: "inquests"
    cloud-platform.justice.gov.uk/owner: "inquests: LAAInquests@JusticeUK.onmicrosoft.com"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-inquests-internal-ui"
    cloud-platform.justice.gov.uk/team-name: "laa-inquests"
    cloud-platform.justice.gov.uk/review-after: ""
